Documentación de todos los servicios del controlador AuthController
